--- a/src/posts/9-post-number-nine/post.mdx
+++ b/src/posts/9-post-number-nine/post.mdx
@@ -9,7 +9,7 @@ readTime: 17
 ---
 
 import { Link } from 'gatsby'
-ในหนังสือได้มีการพูดถึงอยู่ตลอดเพราะเป็นปัจจัยสำคัญของเรื่อง ทีนี้มาดูกันว่าฮิกส์คืออะไร ทำไมถึงขึ้นชื่อว่าเป็นถึงขนาดที่ผู้เขียนยอมเติมแต่งจินตนาการเพื่อให้นิยายมีสีสรรและสนุกเข้มข้นจนวางแทบไม่ลง ramps vexillologist succulents. Normcore etsy pour-over adaptogen skateboard fashion axe, bushwick food truck beard lumbersexual master cleanse actually deep v. **Retro cardigan raw denim franzen kickstarter you probably haven't heard of them literally** aesthetic snackwave four dollar toast. Keffiyeh synth umami, helvetica yr flexitarian jean shorts banh mi cardigan leggings letterpress paleo intelligentsia narwhal.
+ flexitarian jean shorts banh mi cardigan leggings letterpress paleo intelligentsia narwhal.
 
 <blockquote>
   I'm baby tumblr fanny pack tousled seitan. Man bun shaman yr, bushwick fam
