change post mdx

--- a/src/posts/9-post-number-nine/post.mdx
+++ b/src/posts/9-post-number-nine/post.mdx
@@ -9,7 +9,7 @@ readTime: 17
 ---
 
 import { Link } from 'gatsby'
- flexitarian jean shorts banh mi cardigan leggings letterpress paleo intelligentsia narwhal.
+ I am baby tumblr fanny pack tousled seitan.
 
 <blockquote>
   I'm baby tumblr fanny pack tousled seitan. Man bun shaman yr, bushwick fam
