change mdx info

--- a/src/posts/10-post-number-ten/post.mdx
+++ b/src/posts/10-post-number-ten/post.mdx
@@ -2,7 +2,7 @@
 title: ฮิกส์โบซอน ผู้กำเนิดสรรพสิ่ง?
 slug: higgs
 image: ./images/higg.jpg
-date: 2020-06-29
+date: 2020-07-05
 author: วิน รวีร์
 category: สุดแสงสูญ
 readTime: 34
@@ -14,7 +14,7 @@ import {Counter, LikeButton} from '../../components/Complete'
 
 <section className="mdx-page">
 
-ทุกสิ่งเป็นไปได้เมื่อมนุษย์ค้นพบฮิกส์ คืออนุภาคของพระเจ้าดังนั้นพบฮิกส์ก็เหมือนพบว่าพระเจ้าสร้างโลกมาได้อย่างไรถึงแม้ว่าฮิกส์จะพบได้ยากในจักรวาล. แต่ล่าสุดนักวิทยาศาสตร์สามารถพบมันแอบซ่อนอยู่dnaมนุษย์ อภิมหาโครงการจึงกำเนิดเป้าหมายเพื่อเขย่าวงการวิทยาศาสตร์ในอนาคต.
+ทุกสิ่งเป็นไปได้เมื่อมนุษย์ค้นพบฮิกส์ คืออนุภาคของพระเจ้าดังนั้นพบฮิกส์ก็เหมือนพบว่าพระเจ้าสร้างโลกมาได้อย่างไรถึงแม้ว่าฮิกส์จะพบได้ยากในจักรวาล. แต่ล่าสุดนักวิทยาศาสตร์สามารถพบมันแอบซ่อนอยู่มนุษย์ อภิมหาโครงการจึงกำเนิดเป้าหมายเพื่อเขย่าวงการวิทยาศาสตร์ในอนาคต.
 
 
 
