--- a/src/posts/3-post-number-three/post.mdx
+++ b/src/posts/3-post-number-three/post.mdx
@@ -1,16 +1,16 @@
 ---
-title: Javascript Tutorial
-slug: javascript-tutorail
-image: ./images/js-1.png
-date: 2020-05-04
-author: john smith
-category: javascript
-readTime: 20
+title: กาลิเลโอกับการบันทึกจากกล้องดูดาว
+slug: galileo
+image: ./images/galileo-lamp.jpg
+date: 2020-06-11
+author: วิน รวีร์
+category: สุดแสงสูญ
+readTime: 34
 ---
 
 import { Link } from "gatsby"
 
-_I'm baby humblebrag neutra taiyaki af vice bespoke locavore fanny pack_ ramps vexillologist succulents. Normcore etsy pour-over adaptogen skateboard fashion axe, bushwick food truck beard lumbersexual master cleanse actually deep v. **Retro cardigan raw denim franzen kickstarter you probably haven't heard of them literally** aesthetic snackwave four dollar toast. Keffiyeh synth umami, helvetica yr flexitarian jean shorts banh mi cardigan leggings letterpress paleo intelligentsia narwhal.
+ทุกสิ่งเป็นไปได้เมื่อมนุษย์ค้นพบฮิกส์ คืออนุภาคของพระเจ้าดังนั้นพบฮิกส์ก็เหมือนพบว่าพระเจ้าสร้างโลกมาได้อย่างไรถึงแม้ว่าฮิกส์จะพบได้ยากในจักรวาล. แต่ล่าสุดนักวิทยาศาสตร์สามารถพบมันแอบซ่อนอยู่มนุษย์ อภิมหาโครงการจึงกำเนิดเป้าหมายเพื่อเขย่าวงการวิทยาศาสตร์ในอนาคต.
 
 <blockquote>
   I'm baby tumblr fanny pack tousled seitan. Man bun shaman yr, bushwick fam
