--- a/src/posts/9-post-number-nine/post.mdx
+++ b/src/posts/9-post-number-nine/post.mdx
@@ -1,16 +1,16 @@
 ---
-title: Questions
-slug: questions
-image: ./images/js-3.png
-date: 2020-05-10
-author: john smith
-category: javascript
-readTime: 17
+title: ความลึกลับของดีเอ็นเอขยะ
+slug: dna
+image: ./images/dna.jpg
+date: 2020-07-03
+author: วิน รวีร์
+category: สุดแสงสูญ
+readTime: 34
 ---
 
 import { Link } from 'gatsby'
 
-_I'm baby humblebrag neutra taiyaki af vice bespoke locavore fanny pack_ ramps vexillologist succulents. Normcore etsy pour-over adaptogen skateboard fashion axe, bushwick food truck beard lumbersexual master cleanse actually deep v. **Retro cardigan raw denim franzen kickstarter you probably haven't heard of them literally** aesthetic snackwave four dollar toast. Keffiyeh synth umami, helvetica yr flexitarian jean shorts banh mi cardigan leggings letterpress paleo intelligentsia narwhal.
+ทุกสิ่งเป็นไปได้เมื่อมนุษย์ค้นพบฮิกส์ คืออนุภาคของพระเจ้าดังนั้นพบฮิกส์ก็เหมือนพบว่าพระเจ้าสร้างโลกมาได้อย่างไรถึงแม้ว่าฮิกส์จะพบได้ยากในจักรวาล. แต่ล่าสุดนักวิทยาศาสตร์สามารถพบมันแอบซ่อนอยู่มนุษย์ อภิมหาโครงการจึงกำเนิดเป้าหมายเพื่อเขย่าวงการวิทยาศาสตร์ในอนาคต.
 
 <blockquote>
   I'm baby tumblr fanny pack tousled seitan. Man bun shaman yr, bushwick fam
